[package]
name = "ChibiOS-rust"
version = "0.2.0"
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
build = "build.rs"

[build-dependencies]
gcc = "0.3"
bindgen = "0.26.3"

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
cty = "0.1"

[features]
# Set a default chip like so. N.B. that specifying --feature on the command line
#  will *add* to the default, and not override it.
#default = ["stm32f051x8"]

thumbv6m = []
thumbv7m = []

stm32f051x8 = ["thumbv6m"]
stm32f407xg = ["thumbv7m"]
